<resources>
    <string name="app_name">Shopstock</string>
    <string name="api_map_key">AIzaSyChJrfVJtV1mgYNmaUBlEk_i466v71NLGw</string>
    <string name="title_map_explore">Map</string>
    <string name="title_report">Report</string>
    <string name="title_search">Search</string>
    <string name="title_activity_auth_start">AuthStartActivity</string>

    <!-- Strings used for fragments in authentication -->
    <string name="login_fragment_label">LogIn Fragment</string>
    <string name="sign_up_fragment_label">SignUp Fragment</string>

    <!-- Log in fragment -->
    <string name="log_in_button">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="no_account_ask">Don\'t have an account?</string>
    <string name="sign_up_button">Sign Up</string>

    <!-- Sign up fragment -->
    <string name="create_acct_button">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="title_activity_record_trip">RecordTripActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Strings used in data acquisition -->
    <string name="record_meta_title">Record Data</string>
    <string name="add">ADD</string>
    <string name="timeQuestion">When was your visit?</string>
    <string name="stockQuestion">Which items were out of stock?</string>

    <string name="infinity_screen_title_nav">Infinity Screen</string>
    <string name="infinity_screen_title">Help us out by answering a few questions!</string>
    <string name="default_prompt">This is a default stock question?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="stop_questions">Exit</string>

    <!-- Store information view fragment -->
    <string name="go_to_report">Record Trip</string>

</resources>
